Revision history for Rubric

{{$NEXT}}

0.152     2012-07-10 16:29:38 America/New_York
          add a missing prereq, stop losing errors doing session decrypt
          (thanks for the report, Jan Dubois!)

0.151     2012-02-24 10:18:29 America/New_York

          switched from YAML to YAML::XS

          now built with Dist::Zilla; some docs may be a bit weird until I go
          through them with a fine-toothed comb

0.150     2012-02-24 10:09:47 America/New_York

          TOTALLY BUSTED; DO NOT USE

0.149     2011-10-23

          more properly handle encoding for entry text/title/description --
          still a mess, but much, much more likely to just work, now


0.148     2011-08-22

          fix a bug that prevented `rubric user --new-user` from working

          include everything needed to run under PSGI -- although app.psgi
          is not currently installed anywhere

0.147     2011-02-02

          [MIGHT BREAK EVERYTHING]
          remove Config::Auto and stop using it; might break everything!

0.146     2011-01-08
          do not allow Encode to destructively process forms

0.145     2010-01-11
          do not require users to have JSON::XS

0.144     2009-03-11
          add entry title to <title> tag (bricas)
          use String::TagString

0.143     2007-07-01
          minor testing/packages updates
          add calendar view (jcap)
          add tag cloud (jcap)
          do work to make things work under fcgi (rjbs)

0.142     2006-09-05
          update install instructions

0.141     2006-09-02
          freshen Module::Install

0.140     2006-05-18
          new version numbering, new release schedule: less stable, more often
          fix a small RSS bug that bugged a large number Firefox users
          lots of forgotten changes

0.12      2005-10-26 (long overdue)
          some tiny test cleanups that might make tests... pass!
          moved repository to svn